<resources>
    <string name="app_name">LVLup| MVC Architecture</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="FirstName">First Name</string>
    <string name="ConfirmPassword">Confirm Password</string>
    <string name="SignUp">Sign up</string>
    <string name="AlreadyHaveAnAccount">Already have an account?</string>
    <string name="Login">Login</string>
    <string name="DontHaveAnAccount">"  Don't have an account?"</string>
    <string name="Register">Register</string>
    <string name="BackgroundImageOnLoginPage">Background image on login page</string>
    <string name="title_activity_login2">LoginActivity2</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="Name">Name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start_running">START Running</string>
    <string name="peofileMenuButton">Profile</string>
    <string name="historyMenuButton">Hystory</string>
    <string name="logOutMenuButton">Log Out</string>
    <string name="AveragePace">Average Pace:</string>
    <string name="Time">Time:</string>
    <string name="Distance">Distance:</string>
    <string name="StopGPS">Stop</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="SaveActivity">Save Activity</string>
    <string name="Discard">Discard</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_transform">Transform</string>
    <string name="menu_reflow">Reflow</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_settings">Settings</string>

    <string name="lorem_ipsum_title">Lorem Ipsum"</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply placeholder text of the printing and
        typesetting industry. Lorem Ipsum has been the industry\'s standard placeholder text ever
        since the 1500s, when an unknown printer took a galley of type and scrambled it to make a
        type specimen book"
    </string>
    <string name="stopButton">STOP</string>
    <string name="StartGPS">Start Running</string>
</resources>